# context-cut

./: .env.example  .gitignore  README.md  TECHNICAL_REPORT.md  benchmark.py  demo.py  docker-compose.yml  pyproject.toml
data/raw/customer_call_center/Customer Call Center Dataset + Analysis/: call_transcripts.csv  final_transcripts_enriched.csv
src/: config.py  enrich.py  index_qdrant.py  ingest.py  regenerate_summaries.py  schema.py
src/agents/: sales_agent.py
src/context/: compress.py  naive.py  prune.py
